# drdd-replication

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
benchmark/: README.md
benchmark/scripts/: ablate_drdd.py  bench_binutils.py  bench_crashjs.py  drdd_issre.py  verify_competitors.py
cli/: README.md  _cli.py  bench  cherrypick_xml  minimize
predicates/: README.md
predicates/binutils/: Makefile  manifest.json  oracle.py
predicates/binutils/bug-20605/: config.toml  input
predicates/binutils/bug-21135/: config.toml
predicates/binutils/bug-21136/: config.toml
predicates/binutils/bug-21138/: config.toml
predicates/binutils/bug-21139/: config.toml
predicates/binutils/bug-21144/: config.toml
predicates/binutils/bug-21409-1/: config.toml
predicates/binutils/bug-21414/: config.toml
predicates/binutils/bug-30886/: config.toml
predicates/crashjs/: Makefile  manifest.json  oracle.py  session.py  worker.mjs
predicates/crashjs/lodash-1/: config.toml
predicates/ffmpeg/: manifest.json  oracle.py
predicates/xml/: Makefile  basex.py  manifest.json  oracle.py
scripts/: README.md  minimize_binutils  minimize_crashjs
src/algos/: cdd.py  ddmin.py  ddprime.py  pmadd.py  probdd.py
src/bench/: harness.py  logging.py  results.py
src/core/: config.py  errors.py  logging.py  oracle.py  telemetry.py
src/drivers/: binutils.py  crashjs.py
src/loader/: __init__.py  family.py  plugin.py
src/reducers/: __init__.py  cdd.py  ddmin.py  drdd.py  pmadd.py  probdd.py
src/runtime/: logging.py  runner.py
src/utils/: fmt.py
(+38 files in other folders)
