[build-system]
requires = [
	"setuptools>=64",
	"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "drdd-replication"
version = "0.1.0"
description = "Delta Debugging algorithm implementations and benchmark infrastructure"
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{ name = "Anonymous Authors" },
]
dependencies = [
	"defusedxml >= 0.7.1",    # cherrypick_xml (safe XML parsing)
	"saxonche   >= 12.9.0",   # xml driver (reference XQuery engine)
	"numpy      >= 1.24",     # probdd reducer (probability vectors)
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

